Changelog
=========

11.0.dev0 - (unreleased)
------------------------

10.9 - (2016-05-19)
-------------------
* Change: pylint fixes
  [ichim-david refs #71940]

10.8 - (2016-03-01)
-------------------
* Bug fix: fixed faceted filter for showing the latest version of given object
  [ichimdav refs #69328]

10.7 - (2016-02-03)
-------------------
* Bug fix: prevent conversion error due to permission if there is a need to
  delete the images that should no longer be there such as in the cases where
  another figure is replacing the current figure
  [ichimdav refs #68012]

10.6 - (2015-12-11)
-------------------
* Change: remove older converted images only if their name are no longer found
  within the parent EEAFigureFile id otherwise the original converted Images
  are only modified in place
  [ichimdav refs #31062]

10.5 - (2015-12-07)
-------------------
* Bug fix: removed leftover total variable call from the upgrade script defined
  in 10.2
  [ichimdav refs #30695]

10.4 - (2015-11-18)
-------------------
* Bug fix: fixed upgrade script added in 10.2 for the EEAFigureFile that do not
  have the _convertjob attribute
  [ichimdav refs #30695]

10.3 - (2015-11-18)
-------------------
* Bug fix: fixed a potential issue when calling GetJobStatus which assumed that
  result and status can be called as attribute
  [ichimdav refs #30695]

10.2 - (2015-11-18)
-------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [ichimdav refs #30695]

10.1 - (2015-11-18)
-------------------
* Bug fix: fixed creation of versions and import of EEAFigure
  when EEAFigureFile had an async job attached to them
  [ichimdav refs #30695]

10.0 - (2015-11-16)
-------------------
* Feature: edit ds_resolveuid to call via python code
  [lucas refs #30065]

9.9 - (2015-11-03)
------------------
* Change: eeafigure_file.pt now use fontawesome classes for filetype icons
  [ichimdav refs #28967]

9.8 - (2015-10-22)