@@ -1,0 +1,29 @@
+<span tal:replace="structure here/manage_page_header" />
+<span tal:replace="structure python:here.manage_form_title(here, here, form_title='Add Permalink Mapping')" />
+
+<p class="form-help">
+    Please fill the form below and click <strong>Add</strong>.
+</p>
+
+<form action="zmi_addPermalinkMapping" method="post">
+    <table border="0" cellspacing="0" cellpadding="2" width="100%">
+
+        <tr>
+            <td class="form-label">Id</td>
+            <td><input type="text" name="id" size="30"/></td>
+        </tr>
+
+        <tr>
+            <td class="form-label">Version Id</td>
+            <td><input type="text" name="versionId:utf8:ustring" size="50"/></td>
+        </tr>
+
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Add"/></td>
+        </tr>
+
+    </table>
+</form>
+
+<span tal:replace="structure here/manage_page_footer" />
